--- a/LocAdoc/app/src/main/res/values/styles.xml
+++ b/LocAdoc/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/LocadocC2</item>
     </style>
 
-    <style name="LocAdoc_Theme" parent="Theme.AppCompat.NoActionBar" >
+    <style name="LocAdoc_Theme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:textColorPrimary">@android:color/primary_text_dark_nodisable</item>
         <item name="android:colorBackground">@color/Background_App</item>
         <item name="colorAccent">@color/LocadocC</item>
@@ -18,7 +18,7 @@
         <item name="android:textColorSecondaryInverse">@color/LocadocC</item>
     </style>
 
-    <style name="LocAdoc_2" parent="Theme.AppCompat.NoActionBar" >
+    <style name="LocAdoc_2" parent="Theme.AppCompat.NoActionBar">
         <item name="android:textColorPrimary">@color/Text1</item>
         <item name="android:navigationBarColor">@color/LocadocC</item>
         <item name="colorPrimary">@color/LocadocC</item>
@@ -26,6 +26,18 @@
         <item name="android:colorBackground">@color/background_material_dark</item>
         <item name="android:statusBarColor">@color/LocadocC</item>
         <item name="colorAccent">@color/LocadocC2</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="SearchViewTheme" parent="Widget.AppCompat.Light.SearchView">
+        <item name="android:textColorHint">@android:color/white</item>
     </style>
 
 </resources>
