--- a/LocAdoc/app/src/debug/res/values/google_maps_api.xml
+++ b/LocAdoc/app/src/debug/res/values/google_maps_api.xml
@@ -20,7 +20,7 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+    <string name="LocAdoc_GoogleAPIKey" templateMergeStrategy="preserve" translatable="false">
         AIzaSyCMdg0snBe6r4pzWQBo3kQ4mFr1ChFG1gs
     </string>
 </resources>
