--- a/LocAdoc/app/src/main/res/layout/activity_sign_up.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_sign_up.xml
@@ -101,6 +101,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:hint="@string/prompt_cnum"
+                    android:inputType="phone"
                     android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
