Add listView item in Settings
- Add listView item for Setting Listview
- make the resetpassword init() code as comment
- change initial activity into Login Activity in Android Manifest

--- a/LocAdoc/app/src/main/res/layout/activity_reset_password.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_reset_password.xml
@@ -56,7 +56,7 @@
 
             <!-- Current Password Section -->
             <TextView
-                android:id="@+id/textViewConfirmUserIdLabel"
+                android:id="@+id/textViewConfirmCurPwdLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/space_confirm_1A"
@@ -70,7 +70,7 @@
                 android:id="@+id/editTextCurPwd"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/activity_text_height"
-                android:layout_below="@id/textViewConfirmUserIdLabel"
+                android:layout_below="@id/textViewConfirmCurPwdLabel"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginLeft="15dp"
@@ -78,13 +78,13 @@
                 android:background="@drawable/text_border_selector"
                 android:gravity="center_vertical"
                 android:hint="Current Password"
-                android:inputType="textPersonName"
+                android:inputType="textPassword"
                 android:paddingLeft="@dimen/activity_text_padding"
                 android:paddingRight="@dimen/activity_text_padding"
                 android:textSize="18sp"/>
 
             <TextView
-                android:id="@+id/textViewConfirmUserIdMessage"
+                android:id="@+id/textViewConfirmCurPwdMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/editTextCurPwd"
@@ -111,7 +111,7 @@
                 android:id="@+id/editTextNewPwd"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/activity_text_height"
-                android:layout_below="@id/textViewConfirmUserIdLabel"
+                android:layout_below="@id/textViewConfirmCurPwdLabel"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginLeft="15dp"
@@ -119,7 +119,7 @@
                 android:background="@drawable/text_border_selector"
                 android:gravity="center_vertical"
                 android:hint="New Password"
-                android:inputType="textPersonName"
+                android:inputType="textPassword"
                 android:paddingLeft="@dimen/activity_text_padding"
                 android:paddingRight="@dimen/activity_text_padding"
                 android:textSize="18sp"/>
@@ -152,7 +152,7 @@
                 android:id="@+id/editTextConfirmNewPwd"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/activity_text_height"
-                android:layout_below="@id/textViewConfirmUserIdLabel"
+                android:layout_below="@id/textViewConfirmCurPwdLabel"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginLeft="15dp"
@@ -160,7 +160,7 @@
                 android:background="@drawable/text_border_selector"
                 android:gravity="center_vertical"
                 android:hint="New Password"
-                android:inputType="textPersonName"
+                android:inputType="textPassword"
                 android:paddingLeft="@dimen/activity_text_padding"
                 android:paddingRight="@dimen/activity_text_padding"
                 android:textSize="18sp"/>
@@ -182,7 +182,7 @@
                 android:id="@+id/textViewConfirmCodeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/textViewConfirmUserIdMessage"
+                android:layout_below="@id/textViewConfirmCurPwdMessage"
                 android:layout_centerHorizontal="true"
                 android:paddingLeft="15dp"
                 android:text=" "
@@ -219,7 +219,7 @@
 
 
             <Button
-                android:id="@+id/confirm_button"
+                android:id="@+id/reset_pwd_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/space_confirm_2"
