--- a/LocAdoc/app/src/main/res/layout/activity_settings.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_settings.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:titleTextColor="@color/white"
             >
         </android.support.v7.widget.Toolbar>
 
