--- a/LocAdoc/app/src/main/res/layout/fragment_select_area.xml
+++ b/LocAdoc/app/src/main/res/layout/fragment_select_area.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/NewAreaLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/new_area_label"
                 android:textSize="20sp" />
@@ -74,6 +75,7 @@
                 android:id="@+id/ExistingAreaLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="20dp"
                 android:text="@string/existing_area_label"
                 android:textSize="20sp" />
