--- a/LocAdoc/app/src/main/res/menu/home_page.xml
+++ b/LocAdoc/app/src/main/res/menu/home_page.xml
@@ -5,6 +5,7 @@
         android:id="@+id/action_search"
         android:icon="@drawable/ic_location_searching_white_24px"
         app:showAsAction="always|collapseActionView"
+        android:background="#FFF"
         app:actionViewClass="android.support.v7.widget.SearchView"
         android:title="Search"/>
 </menu>
