--- a/LocAdoc/app/src/main/res/values/styles.xml
+++ b/LocAdoc/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/LocadocC</item>
         <item name="colorPrimaryDark">@android:color/background_dark</item>
         <item name="colorAccent">@color/LocadocC2</item>
+        <item name="autoCompleteTextViewStyle">@style/myAutoCompleteTextViewStyle</item>
+        <item name="textAppearanceSearchResultTitle">@style/mySearchResult</item>
     </style>
 
     <style name="LocAdoc_Theme" parent="Theme.AppCompat.NoActionBar">
@@ -38,6 +40,14 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="SearchViewTheme" parent="Widget.AppCompat.Light.SearchView">
         <item name="android:textColorHint">@android:color/white</item>
+    </style>
+    <style name="myAutoCompleteTextViewStyle" parent="Widget.AppCompat.Light.AutoCompleteTextView">
+        <item name="android:popupBackground">#EEE</item>
+        <item name="android:colorFocusedHighlight">#000000</item>
+    </style>
+
+    <style name="mySearchResult" parent="TextAppearance.AppCompat.SearchResult.Title">
+        <item name="android:textColor">#FFF</item>
     </style>
 
 </resources>
