Update in ResetPassword and FYP_Test_Plan
- Update in ResetPassword with DynamoDB and Cognito
- Check the Android Monitor Log
If Success it will show 'Success------------------------------------------'
If Fail it will show 'Fail---------------------------------------'

--- a/LocAdoc/app/src/main/res/layout/activity_reset_password.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_reset_password.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:paddingLeft="15dp"
-                android:text="A confirmation code was sent."
+                android:text="Reset Password"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="@dimen/activity_text_size_small"/>
 
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:paddingLeft="15dp"
-                android:text="Please enter the code below to confirm your account."
+                android:text="Please enter your current password and new password for change."
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textSize="@dimen/activity_text_size_small"/>
 
@@ -147,7 +147,7 @@
                 android:layout_marginRight="15dp"
                 android:background="@drawable/text_border_selector"
                 android:gravity="center_vertical"
-                android:hint="New Password"
+                android:hint="Reconfrim New Password"
                 android:inputType="textPassword"
                 android:paddingLeft="@dimen/activity_text_padding"
                 android:paddingRight="@dimen/activity_text_padding"
