Change Import File, Action Button, Remove Password Field, Change File Decrypt
Change Import File UI, Action Button Size, Remove Password Field After Clicking Login Button, Change File Decrypt Using Key in SQLite, Resolved Issue with Removing Decrypted File

--- a/LocAdoc/app/src/main/res/layout/activity_home_page.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_home_page.xml
@@ -6,15 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:openDrawer="start"
     tools:context="com.locadoc_app.locadoc.UI.HomePage.HomePageActivity">
 
-    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.locadoc_app.locadoc.UI.HomePage.HomePageActivity">
+        android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -29,32 +29,31 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
         </android.support.design.widget.AppBarLayout>
 
-        <FrameLayout android:id="@+id/fragment_container"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context="com.locadoc_app.locadoc.UI.HomePage.HomePageActivity" />
+            android:orientation="vertical">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/FileExplorerFloatingActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginBottom="100dp"
-            android:layout_marginRight="16dp"
-            android:clickable="true"
-            app:backgroundTint="@color/LocadocC"
-            app:srcCompat="@drawable/ic_folder_black_24dp" />
+            <FrameLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                tools:context="com.locadoc_app.locadoc.UI.HomePage.HomePageActivity">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:backgroundTint="@color/LocadocC"
-            android:src="@drawable/ic_note_add_white_24px"/>
-    </android.support.design.widget.CoordinatorLayout>
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/areaContainer"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0">
+
+            </FrameLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
