--- a/LocAdoc/app/src/main/res/layout/activity_pdfviewer.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_pdfviewer.xml
@@ -21,6 +21,7 @@
             android:layout_gravity="bottom"
             android:layout_margin="16dp"
             android:clickable="true"
+            app:fabSize="mini"
             app:backgroundTint="@color/LocadocC"
             app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
     </android.support.design.widget.CoordinatorLayout>
