--- a/LocAdoc/app/src/main/res/layout/fragment_google_map.xml
+++ b/LocAdoc/app/src/main/res/layout/fragment_google_map.xml
@@ -14,12 +14,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginBottom="146dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        app:backgroundTint="@color/LocadocC"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_folder_white_24dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/NewAreaFloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
         android:layout_marginBottom="80dp"
         android:layout_marginEnd="16dp"
         android:clickable="true"
         app:backgroundTint="@color/LocadocC"
         app:fabSize="mini"
-        app:srcCompat="@drawable/ic_folder_black_24dp" />
+        app:srcCompat="@drawable/ic_add_location_white_24dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
