Added file_operation fragment layout

--- a/LocAdoc/app/src/main/res/values/colors.xml
+++ b/LocAdoc/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="LocadocC2">#42be9a</color>
     <color name="primary_text_material_light">#deffffff</color>
     <color name="toolbar_items">#CBCBCB</color>
-    <color name="alert">#ac1600</color>
+    <color name="alert">#f40404</color>
     <color name="success">#37A51C</color>
     <color name="button_default">#329AD6</color>
     <color name="informative_message">#329AD6</color>
