Debug SQLite and modify some style
- Debug SQLite
- Modify some style in NoActionBar
- Add Back menu in Toolbar

--- a/LocAdoc/app/src/main/res/menu/setting_action_page.xml
+++ b/LocAdoc/app/src/main/res/menu/setting_action_page.xml
@@ -5,9 +5,10 @@
       tools:context=".UI.Setting.SettingActivity" >
 
     <!-- Settings, should always be in the overflow -->
-    <item android:id="@+id/setting_save"
-          android:title="save"
-          app:showAsAction="always|collapseActionView"
+    <item
+        android:id="@+id/setting_save"
+        android:title="save"
+        app:showAsAction="always"
         />
 
 </menu>
