--- a/LocAdoc/app/src/main/res/layout/activity_settings.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,6 @@
     tools:context="com.locadoc_app.locadoc.UI.Setting.SettingActivity">
 
     <!-- ToolBar -->
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -18,15 +17,54 @@
             android:id="@+id/setting_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
             android:titleTextColor="@color/white"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
             >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/toolbar_setting_back"
+                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:drawableLeft="@drawable/ic_setting_back_24dp"
+                    android:drawablePadding="8dp"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/toolbar_setting_title"
+                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:text="LocAdoc Settings"
+                    android:textColor="#FFFFFF"
+                    android:textSize="18dp"
+                    />
+            </LinearLayout>
+
+
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
     <!-- App Content: MenuList-->
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
