--- a/LocAdoc/app/src/main/res/layout/fragment_google_map.xml
+++ b/LocAdoc/app/src/main/res/layout/fragment_google_map.xml
@@ -44,7 +44,7 @@
         android:src="@drawable/ic_note_add_white_24px"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/CloseImportFileFAB"
+        android:id="@+id/CloseAreaContainerFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
