--- a/LocAdoc/app/src/main/res/layout/activity_test_data_base.xml
+++ b/LocAdoc/app/src/main/res/layout/activity_test_data_base.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.locadoc_app.locadoc.UI.TestDataBase">
+    tools:context="com.locadoc_app.locadoc.TestDataBase">
 
     <TextView
         android:id="@+id/test"
