--- a/LocAdoc/app/src/main/res/menu/activity_home_page_drawer.xml
+++ b/LocAdoc/app/src/main/res/menu/activity_home_page_drawer.xml
@@ -24,6 +24,10 @@
             android:title="0 MB of 1 GB used"
             android:enabled="false"/>
         <item
+            android:id="@+id/nav_DeleteAcc"
+            android:icon="@drawable/ic_delete_black_24dp"
+            android:title="Delete account" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="Logout" />
